--- a/index.html
+++ b/index.html
@@ -1,45 +1,100 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Fake 3D Effect with WebGL Shaders | Demo 1 | Codrops</title>
-		<meta name="description" content="Demo of the tutorial on how to create a fake 3D image effect with WebGL shaders." />
-		<meta name="keywords" content="webgl, 3d, image, shader, javascript, tutorial, demo, web development, effect" />
-		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="stylesheet" type="text/css" href="css/base.css" />
-		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-	</head>
-	<body class="demo-1">
-		<main>
-			<div class="message">Tilt your phone to see the effect.</div>
-			<div class="frame">
-				<div 
-					id="gl" 
-					data-imageOriginal="img/lady.jpg" 
-					data-imageDepth="img/lady-map.jpg" 
-					data-horizontalThreshold="35" 
-					data-verticalThreshold="15">
-				</div>
-				<div class="frame__title-wrap">
-					<h1 class="frame__title">Fake 3D Effect with Shaders</h1>
-					<p class="frame__tagline">Move your mouse around.</a></p>
-				</div>
-				<div class="frame__links">
-					<a href="https://tympanus.net/Development/GridRevealEffects/">Previous Demo</a>
-					<a href="https://tympanus.net/codrops/?p=38413">Article</a>
-				</div>
-				<a class="frame__github" href="https://github.com/akella/fake3d">GitHub</a>
-				<div class="frame__demos">
-					<a href="index.html" class="frame__demo frame__demo--current">demo 1</a>
-					<a href="index2.html" class="frame__demo">demo 2</a>
-					<a href="index3.html" class="frame__demo">demo 3</a>
-					<a href="index4.html" class="frame__demo">demo 4</a>
-				</div>
-				<div class="frame__content">QO</div>
-			</div>
-		</main>
-		<script src="js/app.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Fake 3D Effect with WebGL Shaders | Demo 1 | Codrops</title>
+    <meta
+      name="description"
+      content="Demo of the tutorial on how to create a fake 3D image effect with WebGL shaders."
+    />
+    <meta
+      name="keywords"
+      content="webgl, 3d, image, shader, javascript, tutorial, demo, web development, effect"
+    />
+    <meta name="author" content="Codrops" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" href="css/base.css" />
+
+    <!-- <script>
+      document.documentElement.className = "js";
+      var supportsCssVars = function () {
+        var e,
+          t = document.createElement("style");
+        return (
+          (t.innerHTML = "root: { --tmp-var: bold; }"),
+          document.head.appendChild(t),
+          (e = !!(
+            window.CSS &&
+            window.CSS.supports &&
+            window.CSS.supports("font-weight", "var(--tmp-var)")
+          )),
+          t.parentNode.removeChild(t),
+          e
+        );
+      };
+      supportsCssVars() ||
+        alert(
+          "Please view this demo in a modern browser that supports CSS Variables."
+        );
+    </script> -->
+  </head>
+  <body class="demo-1">
+    <main>
+      <div
+        id="gl"
+        data-imageoriginal="img/sofa.jpg"
+        data-imagedepth="img/sofa-depth.png"
+        data-horizontalthreshold="25"
+        data-verticalthreshold="25"
+        class="fblike3d"
+        display="block"
+        height="400"
+        width="400"
+      ></div>
+
+      <div
+        id="gl2"
+        data-imageoriginal="img/camera.jpg"
+        data-imagedepth="img/camera-depth.png"
+        data-horizontalthreshold="35"
+        data-verticalthreshold="35"
+        class="fblike3d"
+        height="300"
+        width="300"
+      ></div>
+      <br />
+
+      <div
+        id="gl3"
+        data-imageoriginal="img/neutrogena-2.jpg"
+        data-imagedepth="img/neutrogena-2-depth.png"
+        data-horizontalthreshold="35"
+        data-verticalthreshold="35"
+        class="fblike3d"
+        height="300"
+        width="300"
+      ></div>
+
+      <div
+        id="gl4"
+        data-imageoriginal="img/headphone.jpg"
+        data-imagedepth="img/headphone-depth.jpg"
+        data-horizontalthreshold="15"
+        data-verticalthreshold="15"
+        class="fblike3d"
+        height="500"
+        width="500"
+      ></div>
+    </main>
+    <script src="dist/main.js"></script>
+  </body>
+
+  <!-- <script>
+    jQuery(document).ready(function ($) {
+      console.log("Javascript");
+      new Sketch("gl");
+      new Sketch("gl2");
+    });
+  </script> -->
 </html>
